--- a/ASS_1.html
+++ b/ASS_1.html
@@ -3,41 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEGATRON</title>
+    <title>VOUGHT INTERNATIONAL</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <img src="INDIA.png" alt="Logo" class="logo">
-            <a href="index.html" class="MEGATRON">MEGATRON</a>
+            <img src="l1.png" alt="Logo" class="logo">
+            <a href="index.html" class="VOUGHT INTERNATIONAL">VOUGHT INTERNATIONAL</a>
             <a href="contact.html" class="nav-link">CONTACT</a>
         </nav>
     </header>
 
     <main>
-        <div class="background-image">
-            <h1>WELCOME TO SITE</h1>
-            <p>MESSAGE</p>
-        </div>
+       
 
         <div class="content">
-            <div class="text-box">Colonialism refers to the practice of acquiring and maintaining colonies by a country to expand its power and influence. It often involved the exploitation of resources and indigenous populations, leading to significant cultural, economic, and political impacts. The legacies of colonialism continue to shape global relations and societal structures today.</div>
-            <div class="image-box"><p2 class="p2.png"></p2></div>
-            <img src="p4.png">
-            <img src="p3.png">
-            <div class="image-box"><p1 class="p1.png"></p1></div>
- <div class="text-box">Reverse colonialism, often used metaphorically, refers to the concept of former colonies exerting cultural, economic, or demographic influence over their former colonizers. This can manifest through migration, cultural exchange, or economic investments, leading to shifts in power dynamics and cultural integration between historically linked nations.</div>
-        </div>
-        
-
-        <div class="video-box">
-            <iframe width="560" height="315"  src="https://www.youtube.com/embed/RzHbL0ByeLY" title="Colonialism: Crash Course Geography #39" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" frameborder="0" allowfullscreen></iframe>
+            <div class="text-box"></div>
+ <div class="text-box"></div>
         </div>
     </main>
 
     <footer>
-        <p><br>ALL RIGHTS RESERVED</p>
+        <p><b>DESIGNED BY</b>   
+            <p>23BCSL10</p>
     </footer>
 </body>
 </html>
