--- a/contact.html
+++ b/contact.html
@@ -3,27 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEGATRON</title>
+    <title>VOUGHT SUPPORT</title>
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <header>
         <nav>
-            <img src="INDIA.png" alt="Logo" class="logo">
-            <a href="index.html" class="MEGATRON">MEGATRON</a>
-            <a href="contact.html" class="nav-link active">CONTACT</a>
+            <img src="l1.png" alt="Logo" class="logo">
+            <a href="index.html" class="VOUGHT SUPPORT">VOUGHT SUPPORT</a>
+            <a href="contact.html" class="nav-link active"><b>CONTACT</b></a>
         </nav>
     </header>
 
     <main>
         <div class="paragraph-box">
-            <p>Uncovering the Complex Legacy of Colonialism
+            <p>WELCOME TO THE CONTACT PAGE OF VOUGHT INTERNATIONAL PLEASE FULLFILL THE REQUIRED DETAILS TO ASSIST YOU FURTHER, AND DON'T FORGET TO SUBSCRIBE THE NEWSLETTER. TODAY'S HERO ARE TOMMOROW'S FUTURE, SIGN UP TO GET A CHANCE TO MEET WITH THE SEVEN.</p>
 
-                Colonialism, a phenomenon that shaped the modern world, left an indelible mark on human history. For centuries, European powers expanded their territories, exploiting resources, and imposing their cultures on indigenous populations. The consequences of colonialism are still felt today, from the lingering effects of cultural erasure to the ongoing struggles for independence and self-determination.
-                
-                Explore the Past, Inform the Present
-                
-                On this website, we delve into the multifaceted history of colonialism, examining its roots, evolution, and far-reaching impacts. Through in-depth articles, personal stories, and interactive features, we aim to provide a nuanced understanding of this complex and controversial chapter in human history.</p>
+            <b>ALL COPYRIGHTS RESERVED</b>
         </div>
 
         <form>
@@ -39,10 +35,10 @@
                 <label for="genre">FAVOURITE GENRE</label>
                 <input list="genres" id="genre" name="genre">
                 <datalist id="genres">
-                    <option value="Fiction">
-                    <option value="Non-fiction">
-                    <option value="Mystery">
-                    <option value="Romance">
+                    <option value="Homelander">
+                    <option value="Black-noir">
+                    <option value="Starlight">
+                    <option value="A-train">
                 </datalist>
             </div>
             <div class="form-group">
@@ -54,7 +50,8 @@
     </main>
 
     <footer>
-        <p><br>ALL RIGHTS RESERVED</p>
+        <p><b>DESIGNED BY</b></p>
+        <h3>notOptimusPrime</h3>
     </footer>
 </body>
 </html>
